[gd_scene load_steps=2 format=3 uid="uid://df00cqcc7ibco"]

[ext_resource type="Script" path="res://canvas_layer.gd" id="1_82fib"]

[node name="selectionPage" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_82fib")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.466667, 0.505882, 0.694118, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="bob" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Bob"

[node name="zelda" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Zelda"

[node name="maria" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Maria"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 96

[node name="position" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Panel" type="Panel" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/Panel/MarginContainer"]
layout_mode = 2
text = "blablablabla"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Moves"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 1"

[node name="Button2" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 2"

[node name="Button3" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 3"

[node name="Button4" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Move 4"

[node name="Button" type="Button" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/bob" to="." method="_on_bob_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/zelda" to="." method="_on_zelda_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/maria" to="." method="_on_maria_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
